2009-01-25 Ilia Maslakov <il.smind@gmail.com>

	* src/boxes.c, src/boxes.h, src/dir.c, src/dir.h:
	* src/main.c, src/panel.h, src/screen.c, src/setup.c:
	  - Add support for showing executables at first in the panel view

2009-01-25 Patrick Winnertz <winnie@debian.org> & Sergei Trofimovich  <slyfox@inbox.ru>

	* mhl/string.h, vfs/fish.c, vfs/utilvfs.c, vfs/utilvfs.h: Reworked fish code
	  so that symlinks and files which special characters works now

2009-01-25 Enrico Weigelt <weigelt@metux.de>

	* edit/editcmd.c, src/cmd.c, src/ext.c, src/history.h:
	* src/hotlist.c, src/panelize.c, src/tree.c, src/user.c: 
	* src/view.c, vfs/ftpfs.c, vfs/utilvfs.c:
	  - Made history section names statically instead of dynamic
	  translated strings. This breaks now once every history file
	  but afterwards this will be stable

2009-01-24 Enrico Weigelt <weigelt@metux.de>

	* src/cmd.c: fixed bug #35 (do_view_cmd is now calling repaint_screen())

2009-01-24 Patrick Winnertz <winnie@debian.org>

	* edit/editcmd.c: Fix some issues about regex:
	  - prevent . to match a newline (\n)
	  - match from start of line and not from cursor position

2009-01-18 Patrick Winnertz <winnie@debian.org>

	* edit/editdraw.c: Moved var into if clause as it's only used
	there
	* edit/editlock.c: Removed unnecessary arguement to if condition
	* src/cmd.c: Removed unused pointer
	* src/hotlist.c: Removed unused function save_group
	* src/main.c: Removed unused function do_mc_filename_rename
	* src/util.c: Removed unused struct whentm

2009-01-16 Enrico Weigelt, metux IT service <weigelt@metux.de>

	* src/subshell: setting subshell pty to close-on-exec 
	  (taken from mandriva patches)

2009-01-14 Slava Zanko <slavazanko@gmail.com>

	* lib/mc.ext.in: change filemask for recognize 7z-files
	* vfs/extfs/u7z: 
	  - change only LC_DATE global variable for correct work with arhive;
	  - add sorting by filename in output of list files

2009-01-12 Patrick Winnertz <winnie@debian.org>
